<resources>
    <string name="app_name">Hourly Salary</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Hourly wage</string>
    <string name="second_fragment_label">Salary Increase</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for the first fragment -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="salary">Salary (yearly): %1$s</string>
    <string name="weekly_hours">Hours (weekly): %1$s</string>
    <string name="hourly_wage">Hourly wage : %1$s</string>
    <string name="salary_monthly">Salary (monthly): %1$s</string>

    <!-- Strings used for the second fragment -->
    <string name="salary_increase_desc">Do you want to know your salary when you get an increase to your loan? Enter your current loan
        and move the progress circle.</string>
    <string name="edit_salary">65000</string>
    <string name="salary_increase_percent">0 %</string>
    <string name="salary_increase_result">65000,00 €</string>

</resources>